Updates from Overleaf

--- a/ausarbeitung-latex/bibliography.bib
+++ b/ausarbeitung-latex/bibliography.bib
@@ -20,35 +20,7 @@ pages = {1--12},
 title = {{Real-Time Business Intelligence : Eine systematische Identifikation aktueller Forschungsbedarfe}},
 year = {2016}
 }
-@article{Azvine2006,
-abstract = {In today's competitive environment, analysing data to predict market trends and to improve enterprise performance is an essential business activity. However, it is becoming clear that business success requires such data analysis to be carried out in real-time, and that actions in response to analysis results must also be performed in real-time in order to meet the rapid change in demand from customers and regulators alike. This paper discusses issues and problems of current business intelligence systems, and then outlines our vision of future real-time business intelligence. We present a list of emerging technologies that are being developed within the research program of British Telecommunications plc (BT), which could contribute to the realisation of real-time business intelligence, in addition to some examples of applying these technologies to improve BT's systems and services. {\textcopyright} 2006 IEEE.},
-author = {Azvine, B. and Cui, Z. and Nauck, D. D. and Majeed, B.},
-doi = {10.1109/CEC-EEE.2006.73},
-file = {:Users/leventlukas/OneDrive - DXC Production/Cay{\_}ESB/Gemeinsam/DigitalBoardroom (LeventJan)/Literatur/Realtime BI/download.pdf:pdf},
-isbn = {0769525113},
-journal = {CEC/EEE 2006 Joint Conferences},
-keywords = {Business process management,Data analysis,Data integration,Real-time business intelligence},
-mendeley-groups = {DigiBoard},
-number = {June 2014},
-pages = {29},
-title = {{Real time business intelligence for the adaptive enterprise}},
-volume = {2006},
-year = {2006}
-}
-@article{Azvine2007,
-abstract = {Operational risk is a function of the complexity of the business and the environment that the business operates in. Such complexities increase as the business or the environment become more dynamic, i.e. where change is a permanent feature and a factor to build into the management of the business. The key question that arises is how do businesses respond to such changes today and, if the nature of the business and the environment is becoming more and more dynamic, what actions can businesses take to predict and prepare for change. Viewed in this manner, operational risk becomes very closely related to the operational performance of the enterprise because it can be considered as dealing with changes that have a negative impact on the operational objectives. It is vital for enterprises to understand in real time how they are performing, and where on the spectrum of operational risk they are positioned. To accomplish this, it is essential to have a system for establishing the status of a business at any moment in time in relation to its performance objectives. This is the role of real-time business intelligence (RTBI), without which operational risk management could be out of date, or in some cases out of synchronisation with the business cycle, with serious consequences. This paper discusses the cornerstones of RTBI and demonstrates how these are also essential elements of an effective operational risk management framework. {\textcopyright} Springer Science+Business Media, Inc. 2007.},
-author = {Azvine, B. and Cui, Z. and Majeed, B. and Spott, M.},
-doi = {10.1007/s10550-007-0017-5},
-file = {:Users/leventlukas/OneDrive - DXC Production/Cay{\_}ESB/Gemeinsam/DigitalBoardroom (LeventJan)/Literatur/Realtime BI/azvine2007.pdf:pdf},
-issn = {13583948},
-journal = {BT Technology Journal},
-mendeley-groups = {DigiBoard},
-number = {1},
-pages = {154--167},
-title = {{Operational risk management with real-time business intelligence}},
-volume = {25},
-year = {2007}
-}
+
 @article{Rutz2012,
 abstract = {The primary purpose of business intelligence is to improve the quality of decisions while decreasing the time it takes to make them. Because focus is required on internal as well as external factors, it is critical to decrease data latency, improve report performance and decrease systems resource consumption. This article will discuss the successful implementation of a BI reporting project directly against an OLTP planning solver. The planning solver imports data concerning supply, demand, capacity, bill of materials, inventory and the like. It then uses linear programming to determine the correct product mix to produce at various factories worldwide. The article discusses the challenges faced and a working model in which real-time BI was achieved by providing data to a separate BI server in an innovativeway resulting in decreased latency, reduced resource consumption and improved performance. We demonstrated an alternative approach to hosting data for the BI application separately by loading BI and solver databases at the same time, resulting in faster access to information.},
 author = {Rutz, Dale and Nelakanti, Tara and Rahman, Nayem},
@@ -130,10 +102,7 @@ title = {{Open and Big Data Management and Innovation}},
 year = {2015}
 }
 @article{Sandu2008,
-abstract = {A key component of a company{\~{A}}{\^{A}}{\^{A}}TMs IT framework is a business intelligence (BI) system. BI enables business users to report on, analyze and optimize business operations to reduce costs and increase revenues. Organizations use BI for strategic and tactical decision making where the decision-making cycle may span a time period of several weeks (e.g., campaign management) or months (e.g., improving customer satisfaction).Competitive pressures coming from a very dynamic business environment are forcing companies to react faster to changing business conditions and customer requirements. As a result, there is now a need to use BI to help drive and optimize business operations on a daily basis, and, in some cases, even for intraday decision making. This type of BI is usually called operational business intelligence and real-time business intelligence.},
 author = {Sandu, Daniela Ioana},
-file = {:Users/leventlukas/OneDrive - DXC Production/Cay{\_}ESB/Gemeinsam/DigitalBoardroom (LeventJan)/Literatur/Operational BI/06Sandu.pdf:pdf},
-issn = {1453-1305},
 journal = {Informatica Economica},
 keywords = {Operational Business Intelligence,Real Time Business Intelligence,operational,real-time.,strategic,tactical},
 mendeley-groups = {DigiBoard},
@@ -161,9 +130,8 @@ journal = {Harvard Business Review}
 
 @book{Glucho2008,
 author = {Gluchowski, Peter and Gabriel, Roland and Dittmar, Carsten},
-booktitle = {Management Support Systeme und Business Intelligence},
+title = {Management Support Systeme und Business Intelligence},
 doi = {10.1007/978-3-540-68269-1},
-isbn = {978-3-540-68269-1},
 year = {2008}
 }
 
@@ -177,19 +145,68 @@ journal = {Journal of Computing and Information Technology},
 doi = {10.2498/cit.1002081}
 }
 
-@inproceedings{inproceedings,
+@book{inproceedings,
 author = {Hänel, Tom and Felden, Carsten},
 year = {2015},
-month = {10},
-pages = {147-159},
 title = {Linking Operational Business Intelligence with Value-Based Business Requirements},
-isbn = {978-3-319-25012-0},
 doi = {10.1007/978-3-319-25013-7_12}
 }
 @article{eckerson,
 author = {Eckerson, Wayne W.},
 year = {2007},
-title = {Best Practices in Operational BI}
+title = {Best Practices in Operational BI},
+journal = {TDWI Best Practices Report}
 }
 
-@article{chaud, author = {Chaudhuri, Surajit and Dayal, Umeshwar and Narasayya, Vivek}, title = {An Overview of Business Intelligence Technology}, year = {2011}, issue_date = {August 2011}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, volume = {54}, number = {8}, issn = {0001-0782}, url = {https://doi.org/10.1145/1978542.1978562}, doi = {10.1145/1978542.1978562}, abstract = {BI technologies are essential to running today's businesses and this technology is going through sea changes.}, journal = {Commun. ACM}, month = aug, pages = {88–98}, numpages = {11} }
+@article{chaud, 
+author = {Chaudhuri, Surajit and Dayal, Umeshwar and Narasayya, Vivek}, 
+title = {An Overview of Business Intelligence Technology}, 
+year = {2011}, 
+publisher = {Association for Computing Machinery}, 
+volume = {54}, 
+number = {8}, 
+doi = {10.1145/1978542.1978562}, 
+journal = {Communications of the ACM},
+pages = {88–98}
+}
+
+@article{Azvine2007,
+author = {Azvine, Behnam and Majeed, Basim and Spott, Martin},
+year = {2007},
+pages = {154-167},
+title = {Operational risk management with real-time business intelligence},
+volume = {25},
+number = {1},
+journal = {Bt Technology Journal},
+doi = {10.1007/s10550-007-0017-5}
+}
+
+@article{Azvine2006,
+author = {Azvine, Behnam and Nauck, Detlef and Majeed, Basim},
+year = {2006},
+title = {Real Time Business Intelligence for the Adaptive Enterprise},
+volume = {2006},
+journal = {CEC/EEE 2006 Joint Conferences},
+doi = {10.1109/CEC-EEE.2006.73}
+}
+
+@book{Hanel,
+author = {Hänel, Tom},
+title = {Operational Business Intelligence im Kontext der Analyse und Steuerung von Geschäftsprozessen},
+doi = {10.1007/978-3-658-16635-9},
+year = {2017}
+}
+@article{richard,
+author = {Hackathorn, Richard},
+year = {2004},
+title = {The BI watch real-time to real-value},
+volume = {14},
+journal = {DM Review}
+}
+
+@online{insights_2021, 
+title={Business Intelligence Market to Reach USD 39.35 billion by 2027; Increasing Acceptance of Big Data Analytics to Intensify Market, states Fortune Business Insights}, url={https://www.globenewswire.com/news-release/2021/01/14/2158447/0/en/Business-Intelligence-Market-to-Reach-USD-39-35-billion-by-2027-Increasing-Acceptance-of-Big-Data-Analytics-to-Intensify-Market-states-Fortune-Business-Insights.html},
+author={{Fortune Business Insights}}, 
+year={2021}, 
+  urldate = {2021-01-19}
+}
