--- a/ausarbeitung-latex/master.tex
+++ b/ausarbeitung-latex/master.tex
@@ -31,7 +31,7 @@
 %% BITTE GEBEN SIE HIER DEN TITEL UND DIE AUTORIN / DEN AUTOR DER ARBEIT AN!
 %% DIESE INFORMATIONEN _MÜSSEN_ GESETZT SEIN, UM TITELBLATT, ABSTRACT UND 
 %% EIGENSTÄNDIGKEITSERKLÄRUNG AUTOMATISCH ANZUPASSEN!
-\TitelDerArbeit{Operational / Realtime Business Intelligence: Eine Einführung am Beispiel einer Fabrik}
+\TitelDerArbeit{Operational \& Real-Time Business Intelligence: Eine praxisorientierte Einführung am Beispiel einer prototypischen Auto-Produktion}
 \AutorDerArbeit{Erika Musterfrau}
 \Firma{Musterbetrieb AG}
 \Kurs{WWI14SEA}
@@ -85,13 +85,13 @@
 \input{text/4.tex}
 %	Literaturverzeichnis
 \ihead{} % Neue Header-Definition
-\printbibliography[title=Literatur]
+\printbibliography[title=Literaturverzeichnis]
 \cleardoublepage
 
 % Der Anhang beginnt hier - jedes Kapitel wird alphabetisch aufgezählt. (Anhang A, B usw.)
-\appendix
-\ihead{\appendixname~\thechapter} % Neue Header-Definition
-\input{text/Anhang.tex}
+%\appendix
+%\ihead{\appendixname~\thechapter} % Neue Header-Definition
+%\input{text/Anhang.tex}
 
 % appendix.tex einziehen
 
