--- a/ausarbeitung-latex/text/1.tex
+++ b/ausarbeitung-latex/text/1.tex
@@ -1,5 +1,11 @@
 \onehalfspacing
 \chapter{Einleitung}
-Was ist unser Thema?
-Warum ist es relevant?
-Was machen wir in der Arbeit?
+Nach einem Bericht von Fortune Business Insights wird der Markt für Business Intelligence von aktuell circa 20 Millarden US-Dollar auf über 39 Millarden US-Dollar im Jahr 2027 wachsen. Ein wichtiger Treiber von diesem Wachstum ist COVID-19. Marktteilnehmer konzentrieren sich auf moderne Visualisierungs-Dashboards, die Anwendern helfen, den Status des Coronavirus in Echtzeit abzurufen. \autocite[Vgl.][]{insights_2021} Aber nicht nur COVID-19 ist ein Treiber für Real-Time \ac{BI}. Viele Unternehmen haben die Chancen erkannt, die Analysen in Echtzeit bieten, und investieren in entsprechende Systeme. 
+
+Das Konzept von Real-Time BI ist schon lange bekannt und hat viele Anwendungsmöglichkeiten. So kommt Real-Time BI beispielsweise in Callcenter, Fabriken oder auch Plattformen zum Einsatz. Dabei stellen sich die Fragen wieso Real-Time BI verwendet wird und welcher Mehrwert sich durch den Einsatz erhofft wird. 
+
+Ziel dieser Arbeit ist es, das Konzept von Real-Time BI und dem zugehörigen Operational BI näher zu beleuchten. Dafür wird eine Einordnung vorgenommen und mögliche Vor- und Nachteile vorgestellt. Hauptteil dieser Arbeit ist eine Case Study einer prototypischen Tesla-Produktion. Dabei werden die Konzepte von Operational \& Real-Time BI in die Praxis überführt und die Ergebnisse vorgestellt.
+
+Anhand der Case Study werden Vor- und Nachteile, die Operational \& Real-Time BI bieten anschaulich dargestellt. Dafür wurde eine Umgebung geschaffen, die Produktionsdaten simuliert und manuelle Veränderungen an diesen erlaubt. Diese Produktionsdaten werden in einem Dashboard in Echtzeit strukturiert dargestellt. Schlussendlich wird ein Fazit gezogen und wichtige Erkenntnisse zusammengefasst.
+
+
