--- a/ausarbeitung-latex/text/4.tex
+++ b/ausarbeitung-latex/text/4.tex
@@ -1,3 +1,7 @@
 \chapter{Schlussbetrachtung}
-\section{Zusammenfassung der Ergebnisse}
-\section{Ausblick und Potenziale}
+Ziel dieser Arbeit war es, die Aspekte von Operational \& Real-Time \ac{BI} vorzustellen und anhand einer beispielhaften Implementierung zu verdeutlichen.
+\\Die Begriffe werden oftmals synonym verwendet, wobei beide der Analyse von Geschäftsprozessen und der Möglichkeit, situationsbedingt einzugreifen, dienen. Real-Time \ac{BI} ist dabei von einer besonders niedrigen Latenz geprägt.
+\\Im Rahmen des umgesetzten Beispiels konnten diese Aspekte verdeutlicht werden. Wichtige Kennzahlen, um operative Entscheidungen treffen zu können, werden auf konsistente und realistische Weise simuliert. Es besteht die Möglichkeit Bestellungen zu tätigen, den Lagerbestand zu erhöhten Preisen zu erhöhen, und direkt Einfluss auf die Produktionsmaschinen zu nehmen. Die Simulation reagiert auf diese Eingriffe entsprechend, sodass sich die Auswirkungen der Eingriffe anhand der Dashboards und Kennzahlen - teilweise im zeitlichen Verlauf - erkennen lassen. 
+\\So kann beispielsweise die Produktivität einer Maschine herabgesetzt werden. Dadurch erhöht sich die Bearbeitungszeit und es kommt zum Produktionsstau. Im Dashboard wird dies an vielen Stellen deutlich (siehe Abschnitt \ref{abs:dashProd}). Ein Entscheider oder eine Decision-Engine kann nun zeitgerecht Maßnahmen zur Reperatur der Maschine einleiten, was durch ein Erhöhen der Produktivität simuliert werden kann. Die Auswirkungen dieser Entscheidung lassen sich anschließend wieder im Dashboard ablesen.
+
+Es wird also deutlich, dass die hier vorgestellten Konzepte einen deutlichen Mehrwert bieten \textit{können}. Aufgrund der Komplexität und der Kosten, sollte allerdings betont werden, dass es nicht für jedes Unternehmen und jeden Prozess sinnvoll ist, eine entsprechende Lösung zu implementieren.
