--- a/ausarbeitung-latex/ewerkl.tex
+++ b/ausarbeitung-latex/ewerkl.tex
@@ -1,16 +1,24 @@
 % !TEX root =  master.tex
 
 \clearpage
-\chapter*{Affidavit}
+\chapter*{Ehrenwörtliche Erklärung}
 
 % Wird die folgende Zeile auskommentiert, erscheint die ehrenwörtliche
 % Erklärung im Inhaltsverzeichnis.
 
 % \addcontentsline{toc}{chapter}{Ehrenwörtliche Erklärung}
-I hereby confirm that the individual case study ‘Working capital optimization using HPE’s supply chain for hardware as anexample’ is the result of my own work. I did not receive any help or support from commercial consultants.
-
-All sources and / or materials used are listed and specified in this thesis (references). Furthermore, I confirm that this student assignment has not yet been submitted as part of another examination process neither in identical nor in similar form.\\
+Wir versichern hiermit, dass wir die vorliegende Arbeit
+ mit dem Thema: \textit{\DerTitelDerArbeit} selbstständig verfasst und keine anderen als die angegebenen Quellen und
+Hilfsmittel benutzt haben.\\
 
 \vspace{5em}
 
-Reutlingen, 31.12.2019 \hfill Jan Warwas
+Frankfurt, 22.01.2021 
+\begin{flushright}
+Levent Lukas \\
+\vspace{4em}
+
+Jan Warwas\\
+\vspace{2em}
+\end{flushright}
+
