--- a/ausarbeitung-latex/text/2.tex
+++ b/ausarbeitung-latex/text/2.tex
@@ -1,7 +1,7 @@
 \chapter{Konzeptionelle Betrachtung von Operational \& Real-Time BI}
 \section{Definition und Einordnung}
 \subsection{Business Intelligence}
-Früher wie auch heute hat der Faktor Zeit höchste Bedeutung für den Konkurrenzkampf auf marktwirtschaftlich organisierten Märkten. Dabei spielt es keine Rolle ob es sich um die Entwicklung und Einführung neuer Produkte, deren Produktion oder den Vertrieb handelt. Unternehmen, die am schnellsten auf sich verändernde Bedingungen reagieren können, haben einen erheblichen und mächtigen Vorteil im Konkurrenzkampf mit anderen Unternehmen. \autocite[Vgl.][S. 1]{Stalk1988} Dieser Vorteil kann nur genutzt werden, wenn Unternehmen in die Lage versetzt werden, Entscheidungen schnell, präzise und richtig zu treffen. Um Entscheidungsträger in dieser Weise unterstützen, haben sich in den letzten Jahrzehnten \ac{BI}-Lösungen etabliert.
+Früher wie auch heute hat der Faktor Zeit höchste Bedeutung für den Konkurrenzkampf auf marktwirtschaftlich organisierten Märkten. Dabei spielt es keine Rolle, ob es sich um die Entwicklung und Einführung neuer Produkte, deren Produktion oder den Vertrieb handelt. Unternehmen, die am schnellsten auf sich verändernde Bedingungen reagieren können, haben einen erheblichen und mächtigen Vorteil im Konkurrenzkampf mit anderen Unternehmen. \autocite[Vgl.][S. 1]{Stalk1988} Dieser Vorteil kann nur genutzt werden, wenn Unternehmen in die Lage versetzt werden, Entscheidungen schnell, präzise und richtig zu treffen. Um Entscheidungsträger in dieser Weise unterstützen, haben sich in den letzten Jahrzehnten \ac{BI}-Lösungen etabliert.
 
 Erstmals taucht der Begriff \ac{BI} in dem Beitrag \enquote{A Business Intelligence System} von Hans Peter Luhn aus dem Jahr 1958 auf. Demnach handelt es sich bei \ac{BI} um ein automatisches und intelligentes System, dass Informationen für verschiedene Abteilungen automatisch zusammenfasst, um Aktionen daraus abzuleiten zu können. \autocite[Vgl.][S. 1]{Luhn1958ABI} Seit diesem Beitrag haben sich \ac{BI}-Systeme stetig weiterentwickelt und ein gewaltiges Wachstum erfahren. Außerdem hat \ac{BI} seitdem zunehmend an Bedeutung gewonnen und ist inzwischen fester Bestandteil von vielen Unternehmen. 
 
@@ -10,7 +10,7 @@ Heutzutage erweist sich eine einheitliche Definition des Begriffes \ac{BI}, aufg
 Mit der Zeit wurde der Begriff \ac{BI} immer weiter gefasst und durch neue Konzepte und Technologien erweitert. Ein Teil davon ist Operational \& Real-Time \ac{BI}. Dessen Zusammenwirken mit traditionellen BI-Systemen und eine Einordnung ist Bestandteil des nächsten Unterkapitels.
 
 \subsection{Operational \& Real-Time BI}
-In frühen BI-Systemen kamen die zu analysierenden Daten zum größten Teil aus den Informationssystemen (z.B. ERP-System oder CRM-System) des Unternehmens. Dies erfolgt durch den sogenannten ETL-Prozess: Die Daten werden aus den Informationssystemen extrahiert, transformiert und in das Data Warehouse geladen, um anschließend analysiert werden zu können. \autocite[Vgl.][S. 132]{Glucho2008} Durch technische Limitationen, insbesondere hohe Latenzen bei der Datenbeschaffung, werden bei klassischen BI-System ausschließlich historische Daten analysiert. Dadurch sind die daraus resultierenden Entscheidungen von strategischer und taktischer Bedeutung und haben eine zeitlichen von Tagen bis Jahren. \autocite[vgl.][S. 36]{Sandu2008} An dieser Stelle setzen die Konzepte von Operational \& Real-Time BI an. 
+In frühen BI-Systemen kamen die zu analysierenden Daten zum größten Teil aus den Informationssystemen (z.B. ERP-System oder CRM-System) des Unternehmens. Dies erfolgt durch den sogenannten ETL-Prozess: Die Daten werden aus den Informationssystemen extrahiert, transformiert und in das Data Warehouse geladen, um anschließend analysiert werden zu können. \autocite[Vgl.][S. 132]{Glucho2008} Durch technische Limitationen, insbesondere hohe Latenzen bei der Datenbeschaffung, werden bei klassischen BI-System ausschließlich historische Daten analysiert. Dadurch sind die daraus resultierenden Entscheidungen von strategischer und taktischer Bedeutung und haben eine zeitlichen Rahmen von Tagen bis Jahren. \autocite[Vgl.][S. 36]{Sandu2008} An dieser Stelle setzen die Konzepte von Operational \& Real-Time BI an. 
 
 Heutzutage haben Unternehmen viel mehr Daten zur Verfügung als noch vor 10 Jahren. Durch Social Media, Sensoren oder das sogenannte Internet der Dinge fallen sekündlich Daten an, welche für Unternehmen potentiell von Interesse sein können. Außerdem erzeugen und sammeln Unternehmen immer mehr operative Daten. Um Schlüsse aus diesen Daten ziehen zu können, müssen BI-Systeme die Daten nicht mehr täglich / wöchentlich aktualisieren, sondern innerhalb weniger Sekunden. Hier stoßen traditionelle BI-Systeme an ihre Grenzen. \autocite[Vgl.][S. 257]{rutz} Das Ziel von Operational \& Real-Time BI ist demnach das Management und Optimieren des täglichen Geschäftsbetriebs. \autocite[Vgl.][S. 36]{Sandu2008}
 
@@ -18,6 +18,20 @@ Operational BI bezieht sich auf Entscheidungen, die durch die Analysen getroffen
 
 Wie bereits erwähnt, versteht man heutzutage unter Operational \& Real-Time BI oftmals das Gleiche. Auch in der Literatur findet man oft, dass sich Operational BI zu Real-Time BI entwickelt hat. \autocite[Vgl.][S. 36]{Sandu2008} Dabei weisen Real-Time Bi-Systeme ähnliche Architekturen wie traditionelle BI-Systeme auf. Zusätzlich findet man Mechanismen zur kontinuierlichen Datenintegration sowie eine aktive Decision-Engine. \autocite[Vgl.][S. 96]{chaud} Real-Time Bi-Systeme sind demnach gekennzeichnet durch keine bzw. eine sehr niedrige Latenz von Datenentstehung und der abgeleiteten Entscheidung.
 
-Zusammenfassend lässt sich sagen, dass Operational BI dazu dient Geschäftsprozesse zu analysieren und situationsbedingt einzugreifen. Voraussetzung dafür ist, dass die Daten in Echtzeit / ohne Latenz vorliegen. Dies ist das Hauptmerkmal von Real-Time BI. Die meisten Daten von Real-Time BI-Systemen sind operative Daten von beispielsweise Sensoren oder Social Media. Deshalb werden beide Begriffe oftmals synonym verwendet. Nun stellt sich die Frage, welche Vor- bzw. Nachteile diese Konzepte bringen und was die Implikationen für die Praxis sind. Dies ist Bestandteil des nächsten Unterkapitels.
+Zusammenfassend lässt sich sagen, dass Operational BI dazu dient, Geschäftsprozesse zu analysieren und situationsbedingt einzugreifen. Voraussetzung dafür ist, dass die Daten in Echtzeit / ohne Latenz vorliegen. Dies ist das Hauptmerkmal von Real-Time BI. Die meisten Daten von Real-Time BI-Systemen sind operative Daten von beispielsweise Sensoren oder Social Media. Deshalb werden beide Begriffe oftmals synonym verwendet. Nun stellt sich die Frage, welche Vor- bzw. Nachteile diese Konzepte bringen und was die Implikationen für die Praxis sind. Dies ist Bestandteil des nächsten Unterkapitels.
 
 \section{Vor- und Nachteile mit deren Auswirkungen in der Praxis}
+Ob man als Unternehmen Operational \& Real-Time BI-Systeme bei sich implementiert, hängt von vielen Faktoren ab. Letztendlich hängt die Entscheidung davon ab, ob sich die Investitionen finanziell lohnen würde und ob durch Einführung der Konzepte ein Mehrwert für das Unternehmen generiert wird. Deshalb wird in der folgenden Auflistung eine Übersicht der Vor- und Nachteilen von Operational \& Real-Time BI gegeben, die bei einer Investitionsentscheidung berücksichtigt werden sollten.  
+\subsubsection{Vorteile}
+Operational \& Real-Time BI-Systeme ermöglichen eine kontinuierliche Prozessüberwachung und -verbesserung. Zusätzlich kann situativ in Prozesse eingegriffen werden. Dadurch wird eine höhere Produktqualität erreicht. \autocite[Vgl.][S. 30]{Hanel} Da Operational \& Real-Time BI nicht ausschließlich bei produzierenden Unternehmen zum Einsatz kommt, kann diese Annahme beispielsweise auf Serviceunternehmen übertragen werden. Dort wird durch Einsatz der Konzepte die Qualität des Service verbessert. Dementsprechend ist ein Vorteil von Operational \& Real-Time BI die Verbesserung der Qualität des Outputs eines Unternehmens. Dies führt in der Regel zu einer Steigerung der Kundenzufriedenheit.
+
+Wie Eingangs erwähnt kann es durch den Einsatz von Operational \& Real-Time BI zu Kosteneinsparungen im Unternehmen kommen. Dies ist der Fall, wenn die Implementierungs- und Betriebskosten des Systems niedriger als der Mehrwert bzw. die Einsparungen für das Unternehmen sind. \autocite[Vgl.][2]{richard} Einsparungen ergeben sich beispielsweise durch Prozessoptimierung oder durch Verkürzung der Zeit zwischen einem Ereignis und der entsprechenden Entscheidung / Maßnahme. 
+
+\subsubsection{Nachteile}
+Durch den Einsatz von Operational \& Real-Time BI kann es zu Kosteneinparungen kommen. Dies ist aber nicht immer der Fall. Die Planung, Implementierung und der Betrieb von solchen Systemen ist durch hohe technische Anforderungen sehr kostenintensiv. \autocite[Vgl.][S. 36]{Sandu2008} Sind diese Kosten höher als der Mehrwert für das Unternehmen, wäre eine Investition negativ zu bewerten. Dementsprechend ist ein Einsatz von Operational \& Real-Time BI nicht immer notwendig und kann im schlimmsten Fall zu Verlusten führen.
+
+Ein Hauptmerkmal von Operational \& Real-Time BI-Systemen ist die Entscheidungsfindung bzw. das Ableiten von Maßnahmen ohne Latenz. Diese Entscheidungsfindung übernimmt eine Decision-Engine, die in der Regel Entscheidungen auf Basis von Kennzahlen trifft. Es ist sehr komplex, qualitative Faktoren, die bei menschlichen Entscheidungen eine Rolle spielen, in solch einer Decision-Engine abzubilden.\autocite[Vgl.][4]{Azvine2006} So kann es vorkommen, dass es durch Operational \& Real-Time BI zu falschen Entscheidungen / Maßnahmen kommt, da ausschließlich quantitative Faktoren berücksichtigt wurden.
+
+Operational \& Real-Time BI-Systeme benötigen eine Vielzahl von Daten. Diese gibt es in Zeiten vom Internet, Sensoren und Informationssystemen zu genüge. Die Herausforderung ist, nicht Daten zu bekommen, sondern Daten zum richtigen Zeitpunkt in der richtigen Qualität. \autocite[Vgl.][160]{Azvine2007} So sind Operational \& Real-Time BI-Systeme in höchstem Maße davon abhängig, dass sie Daten in ausreichender Qualität zum richtigen Zeitpunkt bekommen, um funktionieren zu können. 
+
+Wie man an den Vor- und Nachteilen erkennen kann, ist ein Einsatz von Operational \& Real-Time BI nicht immer notwendig. In der Praxis muss geprüft werden, ob ein Einsatz sinnvoll ist und ob Operational \& Real-Time BI den eigenen Anforderungen gerecht wird. Hier gilt es eine Kosten-Risiko Abwägung vorzunehmen. Nichtsdestotrotz kann durch Operational \& Real-Time BI ein signifikanter Wettbewerbsvorteil erreicht werden. 
